--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
     font-family: 'Lato', sans-serif;
     color: #21e6c1;
     line-height: 1.6;
+    background-color: #212121;
 }
 
 ul {
@@ -33,4 +34,42 @@ p {
 
 img {
     width: 100%;
+}
+
+.navbar {
+    background-color: #14ffec;
+    color: #323232;
+    height: 70px;
+}
+
+.navbar ul {
+    display: flex;
+}
+
+.navbar a {
+    color: black;
+    padding: 10px;
+    margin: 0 5px;
+}
+
+.navbar a:hover {
+    border-bottom: 2px black solid;
+}
+
+.navbar .flex {
+    justify-content: space-between;
+}
+
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+    overflow: auto;
+    padding: 0 40px;
+}
+
+.flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
