--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cousine:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+:root {
+    --second-color: #1b262c;
+    --primary-color: #ffffff;
+    --blue-color: #3282b8;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -6,10 +12,10 @@
 }
 
 body {
-    font-family: 'Lato', sans-serif;
-    color: #21e6c1;
+    font-family: 'Cousine', monospace;
+    color: #fff;
     line-height: 1.6;
-    background-color: #212121;
+    background-color: var(--primary-color);
 }
 
 ul {
@@ -18,7 +24,7 @@ ul {
 
 a {
     text-decoration: none;
-    color: #21e6c1;
+    color: var(--second-color);
 }
 
 h1,
@@ -30,16 +36,24 @@ h2 {
 
 p {
     margin: 10px 0;
+    font-weight: 300;
 }
 
 img {
     width: 100%;
 }
 
+
+/* NAVBAR  */
+
 .navbar {
-    background-color: #14ffec;
-    color: #323232;
+    background-color: var(--blue-color);
+    color: var(--second-color);
     height: 70px;
+}
+
+.navbar h1 {
+    color: var(--primary-color);
 }
 
 .navbar ul {
@@ -47,7 +61,7 @@ img {
 }
 
 .navbar a {
-    color: black;
+    color: var(--primary-color);
     padding: 10px;
     margin: 0 5px;
 }
@@ -60,6 +74,105 @@ img {
     justify-content: space-between;
 }
 
+
+/* Showcase  */
+
+.showcase {
+    height: 400px;
+    background-color: var(--blue-color);
+    color: var(--primary-color);
+    position: relative;
+}
+
+.showcase h1 {
+    font-size: 40px;
+}
+
+.showcase p {
+    margin: 20px 0;
+}
+
+.showcase .grid {
+    overflow: visible;
+    grid-template-columns: 55% 45%;
+    gap: 30px;
+}
+
+.showcase-form {
+    position: relative;
+    top: 60px;
+    height: 350px;
+    width: 400px;
+    padding: 40px;
+    z-index: 100;
+    justify-self: flex-end;
+}
+
+.showcase-form .form-control {
+    margin: 30px 0;
+}
+
+.showcase-form input[type='text'],
+.showcase-form input[type='email'] {
+    border: 0;
+    border-bottom: 1px solid #b4becb;
+    width: 100%;
+    padding: 3px;
+    font-size: 16px;
+}
+
+.showcase-form select {
+    display: block;
+    font-size: 15px;
+    font-family: sans-serif;
+    font-weight: 500;
+    color: #444;
+    line-height: 1.3;
+    padding: .3em 1.4em .2em .4em;
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
+    margin: 0;
+    border: 1px solid #aaa;
+    box-shadow: 0 1px 0 1px rgba(0, 0, 0, .04);
+    border-radius: .5em;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: #fff;
+    background-image: url('/images/dropdown.svg'), linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
+    background-repeat: no-repeat, repeat;
+    background-position: right .7em top 50%, 0 0;
+    background-size: .65em auto, 100%;
+}
+
+.showcase-form select:focus {
+    outline: none;
+}
+
+.showcase-form input:focus {
+    outline: none;
+}
+
+.showcase::before,
+.showcase::after {
+    content: '';
+    position: absolute;
+    height: 100px;
+    bottom: -70px;
+    right: 0;
+    left: 0;
+    background: var(--primary-color);
+    transform: skewY(-3deg);
+    -webkit-transform: skewY(-3deg);
+    -moz-transform: skewY(-3deg);
+    -ms-transform: skewY(-3deg);
+    -o-transform: skewY(-3deg);
+}
+
+
+/* Utilities  */
+
 .container {
     max-width: 1100px;
     margin: 0 auto;
@@ -69,6 +182,47 @@ img {
 
 .flex {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.card {
+    background-color: var(--primary-color);
+    border-radius: 10px;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    margin: 10px;
+    color: #333;
+}
+
+.btn {
+    display: inline-block;
+    padding: 10px 30px;
+    cursor: pointer;
+    background-color: var(--blue-color);
+    color: var(--primary-color);
+    border: none;
+    border-radius: 5px;
+}
+
+.btn-outline {
+    background-color: transparent;
+    border: 1px white solid;
+}
+
+.btn:hover {
+    transform: scale(.98);
+    -webkit-transform: scale(.98);
+    -moz-transform: scale(.98);
+    -ms-transform: scale(.98);
+    -o-transform: scale(.98);
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
     justify-content: center;
     align-items: center;
     height: 100%;
