add show ohter function js

--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,10 @@ img {
     background-size: .65em auto, 100%;
 }
 
+.hide {
+    display: none;
+}
+
 .showcase-form select:focus {
     outline: none;
 }
