--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,10 @@ img {
     font-size: 16px;
 }
 
+.add-height {
+    height: 400px !important;
+}
+
 .showcase-form select {
     display: block;
     font-size: 15px;
