--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@
 
 body {
     font-family: 'Cousine', monospace;
-    color: #fff;
     line-height: 1.6;
     background-color: var(--primary-color);
 }
@@ -179,59 +178,17 @@ img {
 }
 
 
-/* Utilities  */
+/* Stats  */
 
-.container {
-    max-width: 1100px;
-    margin: 0 auto;
-    overflow: auto;
-    padding: 0 40px;
+.stats {
+    padding-top: 100px;
 }
 
-.flex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+.stats-heading {
+    max-width: 500px;
+    margin: auto;
 }
 
-.card {
-    background-color: var(--primary-color);
-    border-radius: 10px;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-    padding: 20px;
-    margin: 10px;
-    color: #333;
-}
-
-.btn {
-    display: inline-block;
-    padding: 10px 30px;
-    cursor: pointer;
-    background-color: var(--blue-color);
-    color: var(--primary-color);
-    border: none;
-    border-radius: 5px;
-}
-
-.btn-outline {
-    background-color: transparent;
-    border: 1px white solid;
-}
-
-.btn:hover {
-    transform: scale(.98);
-    -webkit-transform: scale(.98);
-    -moz-transform: scale(.98);
-    -ms-transform: scale(.98);
-    -o-transform: scale(.98);
-}
-
-.grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+.stats .grid h3 {
+    font-size: 35px;
 }
