--- a/css/style.css
+++ b/css/style.css
@@ -192,3 +192,16 @@ img {
 .stats .grid h3 {
     font-size: 35px;
 }
+
+
+/* Cli  */
+
+.cli .grid {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.cli .grid>*:first-child {
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2;
+}
