--- a/css/utilities.css
+++ b/css/utilities.css
@@ -61,6 +61,13 @@
     color: var(--primary-color);
 }
 
+.bg-primary a,
+.btn-primary a,
+.bg-dark a,
+.btn-dark a {
+    color: var(--primary-color);
+}
+
 
 /* TEXT sizes  */
 
