add tech card on latest.html

--- a/css/style.css
+++ b/css/style.css
@@ -244,6 +244,14 @@ img {
     -o-transform: translateY(-15px);
 }
 
+.latest-main .card>img {
+    margin-right: 20px;
+}
+
+.latest-main .grid {
+    padding: 30px;
+}
+
 
 /* Footer  */
 
